# mica

./: .env.example  .gitignore  AGENTS.md  README.md  README_zh.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  approval.py  command.py  enums.py  event.py  interaction.py  run.py  session.py
apps/api/app/runners/: __init__.py  agent_adapters.py  codex_app_server.py  docker_runner.py  opencode_server.py
apps/api/app/schemas/: agent_runs.py  approvals.py  commands.py  docker.py  events.py  interactions.py  runs.py  sessions.py
apps/api/app/services/: agent_run_service.py  approval_service.py  command_service.py  docker_execution_service.py  docker_policy.py  (+4 more)
apps/api/tests/: conftest.py  test_agent_runs.py  test_codex_probe_script.py  test_command_approvals.py  test_command_records.py  test_controlled_opencode_script.py  test_docker_approval_probe_script.py  test_docker_demo_capture_script.py  test_docker_execute_api.py  test_docker_execution_service.py  test_docker_isolation_spike_script.py  test_docker_probe_image_script.py  test_docker_runner.py  test_eval_runner_script.py  test_eval_suite.py  test_event_stream.py  test_events.py  test_isolation_readiness_script.py  test_mica_proxy.py  test_probe_mode.py  test_runs.py  test_runs_ui_contract.py  test_sessions.py  test_sessions_ui_contract.py  test_slice0_verification_script.py
(+91 files in other folders)
